--- a/lib/package.json
+++ b/lib/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/mochixuan/react-native-smart-tip"
   },
-  "types": "./index.d.ts",
+  "types": "./types/index.d.ts",
   "keywords": [
     "react-native",
     "Toast",
