make react-native-root-siblings peerDependence

--- a/lib/package.json
+++ b/lib/package.json
@@ -24,8 +24,8 @@
   ],
   "author": "mochixuan",
   "license": "MIT",
-  "dependencies": {
-    "react-native-root-siblings": "^3.1.7"
+  "peerDependencies": {
+    "react-native-root-siblings": "*"
   },
   "devDependencies": {},
   "bugs": {
